// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser call 1`] = `
Object {
  "name": "foo",
  "type": "call",
}
`;

exports[`parser function 1`] = `
Object {
  "body": Array [
    Object {
      "type": "identifier",
      "value": "b",
    },
    Object {
      "type": "identifier",
      "value": "c",
    },
    Object {
      "type": "identifier",
      "value": "d",
    },
    Object {
      "type": "identifier",
      "value": "e",
    },
    Object {
      "type": "identifier",
      "value": "f",
    },
    Object {
      "type": "identifier",
      "value": "g",
    },
  ],
  "name": "foo",
  "type": "function",
}
`;

exports[`parser identifier 1`] = `
Object {
  "type": "identifier",
  "value": "helloWorld",
}
`;

exports[`parser literal 1`] = `
Object {
  "type": "literal",
  "value": "hello",
}
`;

exports[`parser literal 2`] = `
Object {
  "type": "literal",
  "value": 1,
}
`;

exports[`parser loop 1`] = `
Object {
  "body": Array [
    Object {
      "type": "identifier",
      "value": "b",
    },
    Object {
      "type": "identifier",
      "value": "c",
    },
    Object {
      "type": "identifier",
      "value": "d",
    },
    Object {
      "type": "identifier",
      "value": "e",
    },
    Object {
      "type": "identifier",
      "value": "f",
    },
    Object {
      "type": "identifier",
      "value": "g",
    },
  ],
  "stack": "a",
  "type": "loop",
}
`;
